# ICL-theory-seminar

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: pages.yml
bias-variance-decomposition/: reproduce_TN_plot.py
bias-variance-tradeoff/: reproduce_TN_plot.py
core/core/: bias_variance.py
data/: data_generators.py  generate_test_data.py  pyproject.toml
nanoTabPFN/: README.md  pretrain_classification.py  pretrain_regression.py  pyproject.toml
nanoTabPFN/tfmplayground/: __init__.py  callbacks.py  evaluation.py  interface.py  train.py  utils.py
slides/: MIGRATE-BEAMER.md  Makefile  README.md  figures.tex  index.html  main.tex  preamble.tex  preview.tex  references.bib
slides-html/: README.md  index.html  serve.py
slides-html/css/: figures.css  theme.css
slides-html/interactive/: attention-weights.html  bnn.html  diminishing-sensitivity.html  locality-bias.html  n-as-regulariser.html  regression-with-bins.html  theorem_3_1.html
slides-html/js/: figures.js  loader.js
slides-html/sections/: appendix.html  background.html  conclusion.html  connections.html  statistical_foundations.html  tabicl.html  tabpfn.html  tabpfnv2.html
slides/css/: figures.css  theme.css
slides/interactive/: attention-weights.html  bnn.html  locality-bias.html  n-as-regulariser.html  regression-with-bins.html  scm.html  theorem_3_1.html
src/: README.md
src/tabpfn_v1/: generate_attention_scores.py  generate_locality_predictions.py  pyproject.toml
tabpfn_latest/: create_plots_for_other_versions.py  pyproject.toml
tabpfn_v1/: reproduce_TN_plot.py
(+35 files in other folders)
