[project]
name = "icl-theory-seminar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "iprogress>=0.4",
    "matplotlib>=3.10.9",
    "numpy<2",
    "nvitop>=1.7.0",
    "scikit-learn<1.6",
    "tabpfn==0.1.11",
    "torch==2.1.2",
    "tqdm>=4.67.3",
]
